--- a/peakweather.html
+++ b/peakweather.html
@@ -12,24 +12,24 @@
   <script src="https://kit.fontawesome.com/915f5c5228.js" crossorigin="anonymous"></script>
 </head>
 
-
+ 
 <body>
 
   <header id="navbar">
     <div class="navtoggle" id="myNavtoggle">
-    <div class="container">
-      <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
+      <div class="container">
+        <a href="index.html"><img src="img/logo/logo.svg" class="logo" alt="Logo"></a>
 
-      <nav>
-        <ul>
-          <li><a href="index.html#work">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="index.html#work">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
+          </ul>
+        </nav>
 
-    </div>
+      </div>
     </div>
   </header>
 
@@ -45,9 +45,11 @@
           <p><strong>Duration of Project:</strong> November 2018-June 2019</p>
           <p class="section-break"><strong>Tools:</strong> Adobe XD, Photoshop, Illustrator</p>
           <h3>Purpose</h3>
-          <p class="section-break">Multiple factors can determine if a hike is successful and with weather being a main factor, preparing for it is a must. The weather on and at a summit of a mountain is often different than what most weather forecasts provide which is the surrounding towns.</p>
+          <p class="section-break">Multiple factors can determine if a hike is successful and with weather being a main factor, preparing for it is a must. The weather on and at a summit of a mountain is often different than what most weather
+            forecasts provide which is the surrounding towns.</p>
           <h3>Objective</h3>
-          <p>To view an accurate weather forecast five days in advance as well as immediately while on the mountain. By simplifying and organizing the data, this will help hikers to decide if it’s safe to adventure out on the trail or make quick decisions when already on the mountain.</p>
+          <p>To view an accurate weather forecast five days in advance as well as immediately while on the mountain. By simplifying and organizing the data, this will help hikers to decide if it’s safe to adventure out on the trail or make quick
+            decisions when already on the mountain.</p>
         </div>
 
 
@@ -65,7 +67,9 @@
           <!-- SECTION 1: RESEARCH -->
           <div>
             <h3>Research</h3>
-            <p>I started my research with a competitive analysis of two weather apps specifically designed for outdoor adventure. I developed a marketing profile and UX analysis of each app. This assessment provided an insight to the expectations of a weather app as well as their flaws. I also conducted an in-person interview with three participants that were chosen based on their hiking experience and interest in weather. The goal was to understand a user’s process when planning for a hike, what information users rely on from the app, and how frequent users check the weather for a hike.</p>
+            <p>I started my research with a competitive analysis of two weather apps specifically designed for outdoor adventure. I developed a marketing profile and UX analysis of each app. This assessment provided an insight to the expectations of
+              a weather app as well as their flaws. I also conducted an in-person interview with three participants that were chosen based on their hiking experience and interest in weather. The goal was to understand a user’s process when planning
+              for a hike, what information users rely on from the app, and how frequent users check the weather for a hike.</p>
           </div>
 
           <div class="work-pic">
@@ -115,7 +119,7 @@
         <div class="work-pic">
           <picture>
             <source srcset="img/peakweather/peakweather-wireframes-mid-1x.png" media="(max-width:767px)">
-            <img src="img/peakweather/peakweather-wireframes-mid-2x.png" alt="Mid Fidelty Wireframes" class="section-break" class="img-size">
+            <img src="img/peakweather/peakweather-wireframes-mid-2x.png" alt="Mid Fidelty Wireframes" class="section-break">
           </picture>
         </div>
 
@@ -162,7 +166,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -178,7 +182,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -194,7 +198,7 @@
                 <defs>
                   <style>
                     .cls-1 {
-                      fill: #00abc8;
+                      fill: #008299;
                     }
                   </style>
                 </defs>
@@ -214,12 +218,9 @@
     </div>
   </footer>
 
-  <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-<script src="js/scripts.js"></script>
+  <script src="js/scripts.js"></script>
 
 </body>
 
